--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,3 +14,32 @@ body {
 h1 {
     text-align: center;
 }
+
+/* #threescene {
+    position: relative;
+} */
+
+#centerer {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+#info {
+    position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
+}
+
+#canvasjs {
+    width: 800px;
+    height: 800px;
+    position: absolute;
+    left: 0 auto;
+    top: auto;
+
+}
+
