--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,24 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    position: relative;
+    color: white;
+    letter-spacing: 2px;
+    font-size: 11px;
+    width: 100%;
+    height: 100vh;
+  }
+
+html {
+    margin: 0;
+    padding: 0;
+    background: #25252B;
+  }
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 
 .container {
@@ -43,3 +61,17 @@ h1 {
 
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#c {
+    position: absolute;
+    top: 0;
+    width: 600px;
+    height: 600px;
+    display: block;
+}
